[FEATURE] Knytt personer til rom og berik detaljoppslag med seedet romfordeling
